# sse-mcp-client

./: .cursorrules  .gitignore  CHAT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  ENVIRONMENT_SETUP.md  LANGCHAIN_SETUP.md  LANGGRAPH_DEPLOYMENT_FIX.md  LANGGRAPH_FIXES.md  McpClient.py  README.md  SECURITY.md  __init__.py  chat_interface.py  client.py  complete_integration_test.py  config.py  demo.py  deploy_langgraph.py  env.template  example.py  example_agent.py  example_usage.py  langchain_agent.py  langchain_agent_example.py  langchain_client.py  langchain_config.yaml  langchain_integration.py  langgraph.json  langgraph_agent.py  langgraph_agent_fixed.py  langgraph_chat_agent.py  langgraph_config.py  langgraph_server.py  main.py  mcp_agent.py  pyproject.toml  quick_start.py  real_agent_test.py  requirements.txt  (+14 more)
mcp_client_lib/: __init__.py  langchain_integration.py  mcp_client.py
tests/: README.md  run_mcp_tests.py  run_tests.py  test_ai_agent_mcp.py  test_basic_only.py  test_final_weather.py  test_main_weather.py  test_mcp_agent.py  test_mcp_tools_visibility.py  test_mcp_weather_demo.py  test_quick_weather.py  test_real_weather.py  test_simple_weather.py  test_spokane_weather.py  test_weather_fix.py  test_weather_format.py
